polybot/service-polybot.yaml
apiVersion: v1
kind: Service
metadata:
  name: polybot-service
  namespace: default
spec:
  selector:
    app: polybot
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8443
