polybot/polybot-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polybot-ingress
  namespace: default
spec:
  ingressClassName: nginx   # ✅ זה השדה החדש והנכון
  rules:
  - host: royeb.devops-int-college.com
    http:
      paths:
      - path: /bot
        pathType: Prefix
        backend:
          service:
            name: polybot-service
            port:
              number: 8443
